--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha server/**/*.test.js"
+    "start": "node server/server.js",
+    "test": "SET \"NODE_ENV=test\" && mocha server/**/*.test.js"
   },
   "author": "",
   "license": "ISC",
