--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "crypto-js": "^3.1.6",
     "express": "^4.14.0",
-    "lodash": "^4.15.0",
+    "jsonwebtoken": "^8.1.1",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.5",
-    "mongoose": "^4.5.9"
+    "mongoose": "^5.0.2",
+    "validator": "^9.3.0"
   },
   "devDependencies": {
     "expect": "^1.20.2",
