--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "SET \"NODE_ENV=test\" && mocha server/**/*.test.js"
+    "test": "SET \"NODE_ENV=test\" && mocha server/**/*.test.js --timeout 10000"
   },
   "author": "",
   "license": "ISC",
